k8s/base/trident-app-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trident-app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: trident-web
  ports:
    - port: 6800
      targetPort: 5000
