k8s/base/trident-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trident-deployment  
spec:
  replicas: 1
  selector:
    matchLabels: 
      component: trident-web
  template:
    metadata:
      labels:
        component: trident-web
    spec:
      containers:
        - name: trident-web
          image: bobjwalker99/trident:latest
          imagePullPolicy: "Always"
          ports:
           - containerPort: 5000
             name: http-port
---
apiVersion: v1
kind: Service
metadata:
  name: trident-app-cluster-ip-service  
spec:
  type: ClusterIP
  selector:
    component: trident-web
  ports:
    - port: 6800
      targetPort: 5000  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trident-ingress-nginx  
spec:
  ingressClassName: nginx
  rules:
    - host: trident.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trident-app-cluster-ip-service
                port:
                  number: 6800
