k8s/base/trident-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trident-ingress-nginx
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: trident.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trident-app-cluster-ip-service
                port:
                  number: 6800
